ZezeJava: 修正警告